--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=190e7d5bfb5cc93b8092cbce3cc20415",
+    "/css/app.css": "/css/app.css?id=d9a045ede23be8de3a1c7a193c452d7f"
 }
